# ckanext-dcatapchharvest

./: .gitignore  README.md  dev-requirements.txt  publiccode.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/dcatapchharvest/: config_declaration.yml  dcat_helpers.py  formats.xml  frequency.ttl  harvest_helper.py  harvesters.py  harvesters_i14y.py  iana_media_types.xml  language.xml  license.ttl  logic.py  plugins.py  profiles.py  themes.ttl
ckanext/dcatapchharvest/tests/: base_test_classes.py  test_dcatap_ch_parse.py  test_dcatap_ch_parse_conformant_rdf.py  test_dcatap_ch_parse_deprecated_rdf.py  test_dcatap_ch_profile_serialize.py  test_dcatap_ch_serialize.py  test_dcatap_conformance.py  test_helpers.py  test_parse_dcatap_conformant_rdf.py  test_parse_deprecated_rdf.py  test_profile_parse.py  test_profile_parse_conformant.py  test_profile_parse_deprecated.py  test_swiss_dcatap_profile_parse.py  test_swiss_schemaorg_profile_serialize.py  test_swiss_schemaorg_serialize.py  utils.py
ckanext/dcatapchharvest/tests/fixtures/: 1901.xml  catalog-datasets.xml  catalog-datetimes.xml  catalog-dcatap-conform.xml  catalog-dcatap.ttl  catalog-dcatap.xml  catalog-deprecated.ttl  catalog-deprecated.xml  catalog-themes.xml  catalog.xml  dataset-accrual-periodicity.xml  dataset-class.xml  dataset-contact-point.xml  dataset-coverage.xml  dataset-datetimes-bad.xml  dataset-datetimes.xml  dataset-description.xml  dataset-distribution.xml  dataset-identifier.xml  dataset-issued.xml  dataset-keyword.xml  dataset-language.xml  dataset-media-types.xml  dataset-modified.xml  dataset-multiple-rights.xml  dataset-publisher-.xml  dataset-relation.xml  dataset-rights.xml  dataset-see-also-rdf.xml  dataset-spatial.xml  dataset-temporal.xml  dataset-temporals.xml  (+18 more)
(+6 files in other folders)
